resource/css/_nav.scss
$main-nav-height: 60px;
$main-nav-background-color: #18191B;
$nav-link-active-color: #d3bd98;
$nav-main-padding-lr: 13px;
$nav-toggle-span-height: 2px;

%nav-main-text {
	font: 11px sans-serif;
	font-weight: 200;
	letter-spacing: 2px;
}

#main-navbar {
	display: flex;
	justify-content: flex-end;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	width: 100%;
	background-color: $main-nav-background-color;
	z-index: 8;
	opacity: 1;
}

#nav-brand-wrap,
#nav-toggle-wrap,
#nav-menu-wrap {
	margin: auto;	// flex magic
	display: inline-block;
}

#nav-brand-wrap {
	justify-self: flex-start;
}

.nav-brand {
	display: block;
	justify-self: flex-start;
	line-height: $main-nav-height;
}

#brand-logo {
	width: auto;
	vertical-align: middle;
	padding: 0 15px;
}

#nav-main-menu {
	margin: 0;
	padding: 0;
	list-style: none;
	background-color: $main-nav-background-color;
}

.nav-dropdown-menu,
.nav-dropdown-submenu {
	display: none;
	list-style: none;
	background-color: $main-nav-background-color;
}

.nav-main-link {
	display: block;
	@extend %nav-main-text;
	text-decoration: none;
	color: #fff;
	transition: color .3s ease-in-out;
	&:hover,
	&:active {
		color: $nav-link-active-color;
	}
}

.nav-dropdown-header {
	@extend %nav-main-text;
	color: #777;
	cursor: default;
}

.nav-dropdown-item:hover {
	background-color: #000;
}

.nav-mobile-toggle {
	position: relative;
	width: $main-nav-height;
	height: $main-nav-height;
	cursor: pointer;
}

.toggle-bar {
	display: block;
	position: absolute;
	left: 25%;
	width: 50%;
	height: $nav-toggle-span-height;
	background-color: #fff;
	&:nth-child(1) {
		top: ( $main-nav-height - $nav-toggle-span-height ) / 2 - 6px;
	}
	&:nth-child(2) {
		top: ( $main-nav-height - $nav-toggle-span-height ) / 2;
	}
	&:nth-child(3) {
		top: ( $main-nav-height - $nav-toggle-span-height ) / 2 + 6px;
	}
}

// Laptop
@media screen and (min-width: 980px) {
	$main-nav-height: 60px;
	$nav-main-link-height: 16px;
	$nav-dropdown-item-min-width: 160px;

	#brand-logo {
		height: $main-nav-height / 2;
	}

	/* Hide toggle button */
	.nav-mobile-toggle {
		display: none;
	}

	/* Laptop menu layout */
	%nav-main-padding {
		padding: ($main-nav-height - $nav-main-link-height)/2 $nav-main-padding-lr;
	}

	%nav-dropdown-padding {
		padding: 12px 18px;
	}

	.nav-main-item {
		display: inline-block;
		& > .nav-main-link {
			@extend %nav-main-padding;
		}
	}

	.nav-dropdown-item > .nav-main-link {
		@extend %nav-dropdown-padding;
	}

	.has-dropdown {
		position: relative;
		&:hover > .nav-dropdown-menu,
		&:hover > .nav-dropdown-submenu {
			display: block;
		}
	}

	.nav-dropdown-header {
		@extend %nav-dropdown-padding;
	}

	.nav-dropdown-menu,
	.nav-dropdown-submenu {
		position: absolute;
		padding: 0;
		min-width: $nav-dropdown-item-min-width;
		z-index: 9;
	}

	.nav-dropdown-menu {
		top: $main-nav-height;
		margin-left: - $nav-main-padding-lr;
	}

	.nav-dropdown-submenu {
		top: 0;
		left: $nav-dropdown-item-min-width;
		margin-left: 0;
	}
}

// Mobile
@media screen and (max-width: 979px) {
	$nav-main-item-height: 50px;
	$nav-dropdown-item-height: 40px;
	$nav-main-link-height: 16px;
	$nav-main-padding: 30px;
	$nav-dropdown-menu-padding: 50px;
	$nav-dropdown-submenu-padding: 70px;

	.nav-main-link > .fa-angle-right {
		transform: rotate(90deg);
	}

	#brand-logo {
		height: 20px;
	}

	/* Hide main menu and show when toggled */
	#nav-menu-wrap {
		margin: 0;
	}

	#nav-main-menu {
		display: none;
		position: absolute;
		top: 60px;	// $main-nav-height
		left: 0;
		right: 0;
		max-height: calc(100vh - 60px);
		padding: 0;
		overflow: auto;
	}

	.nav-main-item {
		width: 100%;
		box-sizing: border-box;
		&:hover {
			background-color: #000;
		}
		& > .nav-main-link {
			padding: ($nav-main-item-height - $nav-main-link-height) / 2 $nav-main-padding;
		}
	}

	.nav-dropdown-menu,
	.nav-dropdown-submenu {
		padding: 0;
	}

	.nav-dropdown-menu > .nav-dropdown-item > .nav-main-link,
	.nav-dropdown-menu > .nav-dropdown-header {
		padding: ($nav-dropdown-item-height - $nav-main-link-height) / 2 $nav-dropdown-menu-padding;
	}

	.nav-dropdown-submenu > .nav-dropdown-item > .nav-main-link,
	.nav-dropdown-submenu > .nav-dropdown-header {
		padding: ($nav-dropdown-item-height - $nav-main-link-height) / 2 $nav-dropdown-submenu-padding;
	}
}

